<resources>
    <string name="app_name">PC Builder</string>
    <string name="login">Sign In</string>
    <string name="register">Sign Up</string>
    <string name="username">Username:</string>
    <string name="mail">Email:</string>
    <string name="password">Password:</string>
    <string name="confirmRegistration">Confirm Registration</string>
    <string name="forgetPassword">Forgot Password?</string>
    <string name="confirmPassword">Confirm Password:</string>
    <string name="firestore_users_collection">users</string>
    <string name="authentication_input_username_exist">Username already exists</string>
    <string name="authentication_wrong_format_email">Email wrong format</string>
    <string name="authentication_wrong_format_password">Password must be at least 8 characters</string>


    <string name="name">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="birth">Date of Birth:</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="nav_header_title">SocialGaming</string>
    <string name="nav_header_subtitle">sussygnanus@amongo.sus</string>
    <string name="nav_header_desc">Header</string>
    <string name="logo">\"PC Builder\"</string>
    <string name="email">\"email\"</string>
    <string name="forgot_password">\"Forgot Password?\"</string>

    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="ranks">Ranks</string>
    <string name="events">Events</string>
    <string name="news">News</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="authentication_input_wrong_format_username">Username can only contain alphanumeric characters</string>
    <string name="nome">Name:</string>
    <string name="cognome">Surname:</string>
    <string name="confPass">Confirm Password:</string>
    <string name="confReg">Confirm Password:</string>
    <string name="savedParts">Saved Builds</string>
    <string name="favParts">Favorite Builds</string>
    <string name="profileUser">Sussy</string>
    <string name="profMail">sussygnanus@amongo.sus</string>
    <string name="main">Main Page</string>
    <string name="components">Let\'s Build</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="cpu">CPUs</string>
    <string name="save">Confirm</string>
    <string name="mboard">MotherBoard</string>
    <string name="gpu">GPU</string>
    <string name="ram">RAM</string>

    <string name="logoutfr">Sei sicuro di voler effettuare il logout?</string>
    <string name="logoutyes">Si</string>
    <string name="logoutno">No</string>
    <string name="navigation_waiting">Homepage</string>
    <string name="navigation_profile">Profile</string>
    <string name="navigation_create">Create</string>
    <string name="navigation_search">Search</string>
    <string name="navigation_setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="nightMode">Night Mode</string>
    <string name="change_pass">Change Password</string>
    <string name="saveBuild">Save Build</string>
    <string name="psu">Power Supply</string>
    <string name="buildName">Build Name</string>
    <string name="build_image">Build Image</string>
    <string name="hover">Click to change Image</string>

</resources>