<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/bottom_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>
    <item
        android:id="@+id/bottom_build"
        android:enabled="true"
        android:icon="@drawable/ic_build"
        android:title="@string/components"/>
    <item
        android:id="@+id/bottom_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/profile"/>
    <item
        android:id="@+id/bottom_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"/>

</menu>