<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.socialgaming.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_nav_home_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_build"
            app:destination="@id/nav_build" />
        <action
            android:id="@+id/action_nav_home_to_nav_search"
            app:destination="@id/nav_search" />
    </fragment>

    <fragment
        android:id="@+id/nav_build"
        android:name="com."
        android:label="@string/components"
        tools:layout="@layout/fragment_build"/>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.socialgaming.ui.Search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search"/>

    <activity
        android:id="@+id/loginActivity"
        android:name="com.example.socialgaming.view.LoginActivity"
        android:label="login"
        tools:layout="@layout/fragment_login" />
    <action
        android:id="@+id/action_global_loginActivity"
        app:destination="@id/loginActivity" />
    <action
        android:id="@+id/action_global_nav_home"
        app:destination="@id/nav_home" />

</navigation>