<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#6AC361"
    tools:context=".ui.RegisterActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideSx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideDx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="24dp"/>

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_computer" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideSx"
        app:layout_constraintTop_toBottomOf="@id/logo1"
        android:text="@string/register"
        android:textColor="#1B6723"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/guideDx"
        app:layout_constraintStart_toEndOf="@id/guideSx"
        app:layout_constraintTop_toBottomOf="@+id/txtRegister">

        <EditText
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputCognome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/guideDx"
        app:layout_constraintStart_toEndOf="@id/guideSx"
        app:layout_constraintTop_toBottomOf="@id/txtInputNome">

        <EditText
            android:id="@+id/txtCognome"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:hint="@string/cognome"
            android:inputType="textPersonName"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/guideDx"
        app:layout_constraintStart_toEndOf="@id/guideSx"
        app:layout_constraintTop_toBottomOf="@+id/txtInputCognome">

        <EditText
            android:id="@+id/txtMail"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/guideDx"
        app:layout_constraintStart_toEndOf="@id/guideSx"
        app:layout_constraintTop_toBottomOf="@+id/txtInputMail">

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputConfPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/guideDx"
        app:layout_constraintStart_toEndOf="@id/guideSx"
        app:layout_constraintTop_toBottomOf="@+id/txtInputPass">

        <EditText
            android:id="@+id/txtConfPassword"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:hint="@string/confPass"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/confReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confReg"
        app:layout_constraintTop_toBottomOf="@id/txtInputConfPass"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/guideSx"
        app:layout_constraintEnd_toEndOf="@id/guideDx"
        android:backgroundTint="@color/material_dynamic_primary40"/>

    <TextView
        android:id="@+id/alreadyAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/confReg"
        app:layout_constraintStart_toEndOf="@id/guideSx"
        app:layout_constraintEnd_toEndOf="@id/guideDx"
        android:text="Already have an account?"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/alreadyAcc"
        app:layout_constraintEnd_toEndOf="@id/guideDx"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBaseline_toBaselineOf="@id/alreadyAcc"
        android:text="Sign in"
        android:textAllCaps="false"/>





</androidx.constraintlayout.widget.ConstraintLayout>